# static-files

./: .gitignore  Cargo.toml  build.rs  default.nix  example.password  shell.nix
generator/: Cargo.toml
generator/src/: lib.rs
mod_path/: Cargo.toml
mod_path/src/: lib.rs
src/: auth.rs  db.rs  highlighting.rs  main.rs  session.rs
src/pages/: home.rs  login.rs  mod.rs  one.rs
static/css/: _layout.scss
static_files/: Cargo.toml
static_files/src/: file.rs  lib.rs  web.rs
