[package]
name = "static-files"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.bio>"]

[build-dependencies]
static_files = { path = "static_files" }

[dependencies]
static_files = { path = "static_files" }
mod_path = { path = "mod_path" }

state = { version = "0.2", features = ["tls"] }
rand = "*"

r2d2 = "*"
r2d2_postgres = "*"
postgres = { version = "*", features = ["with-chrono"] }

sodiumoxide = "*"
rustc-serialize = "*"

chrono = "*"

rocket = "0.2.2"
rocket_codegen = "0.2.2"

maud = "*"
maud_macros = "*"

pulldown-cmark = "*"
syntect = "*"
